# ckb-rust-demo

contract/: Cargo.toml  linker.ld  log
contract/.cargo/: config
contract/src/: buddy_allocation.rs  libc_alloc.rs  main.rs
src/: lib.rs
