[package]
name = "contract"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-contract-std = { path = "../../ckb-contract-std" }
buddy-alloc = { git = "https://github.com/jjyr/buddy-alloc.git" }
